@@ -1,3 +1,13 @@
+2007-09-15  Daniel Steffen  <das@users.sourceforge.net>
+
+	* unix/tcl.m4: 	replace all direct references to compiler by ${CC} to
+			enable CC overriding at configure & make time; run
+			check for visibility "hidden" with all compilers;
+			quoting fixes from TEA tcl.m4.
+	(SunOS-5.1x):	replace direct use of '/usr/ccs/bin/ld' in SHLIB_LD by
+			'cc' compiler driver.
+	* unix/configure: autoconf-2.59
+
 2007-09-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* generic/tclBasic.c (Tcl_CreateObjCommand): Only invalidate along the
